[gd_scene load_steps=2 format=3 uid="uid://df1b7vy5uw1hh"]

[ext_resource type="Script" path="res://scripts/components/VisionComponent.gd" id="1_3x51f"]

[node name="VisionComponent" type="Area2D"]
script = ExtResource("1_3x51f")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
